--- a/.github/workflows/template_84_sync.yml
+++ b/.github/workflows/template_84_sync.yml
@@ -25,5 +25,5 @@ jobs:
     - name: Merge and Push
       run: |
         cd template_84
-        git pull ../
+        git pull ../ 84_shift_overleaf
         git push origin master
