--- a/.github/workflows/template_84_sync.yml
+++ b/.github/workflows/template_84_sync.yml
@@ -14,14 +14,15 @@ jobs:
     - name: Setup SSH keys
       run: |
         mkdir -p ~/.ssh
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
+        chmod 600 ~/.ssh/id_ed25519
         ssh-keyscan github.com >> ~/.ssh/known_hosts
 
     - name: Checkout code from mirror
       uses: actions/checkout@v2
       with:
         ref: '84_shift_overleaf'
+        ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}  
 
     - name: Checkout dev repository
       run: |
