--- a/.github/workflows/template_84_sync.yml
+++ b/.github/workflows/template_84_sync.yml
@@ -18,6 +18,9 @@ jobs:
         chmod 600 ~/.ssh/id_ed25519
         ssh-keyscan github.com >> ~/.ssh/known_hosts
 
+    - name: Debug SSH
+      run: ssh -vvv git@github.com
+
     - name: Checkout code from mirror
       uses: actions/checkout@v2
       with:
