--- a/.github/workflows/template_84_sync.yml
+++ b/.github/workflows/template_84_sync.yml
@@ -34,5 +34,7 @@ jobs:
       run: |
         cd template_84
         git config pull.rebase false
+        git config --global user.email "shiqi.yang2022@gmail.com"
+        git config --global user.name "ShiqiYang2022"
         git pull ../ 84_shift_overleaf
         git push origin master
