--- a/.github/workflows/template_issue84_sync.yml
+++ b/.github/workflows/template_issue84_sync.yml
@@ -25,7 +25,6 @@ jobs:
 
     - name: Checkout dev repository
       run: |
-        git config core.fileMode false
         git clone git@github.com:ShiqiYang2022/template_issue84.git
         git fetch --unshallow
         cd template_issue84
@@ -37,5 +36,5 @@ jobs:
         git config pull.rebase false
         git config --global user.email "shiqi.yang2022@gmail.com"
         git config --global user.name "ShiqiYang2022"
-        git pull ../ master
+        git pull --no-ff ../ master
         git push origin 84_shift_overleaf
